# factrix

./: .gitignore  .lycheeignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codex-pr-permission-test.txt  mkdocs.yml  pyproject.toml  test_script.py  versions.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: docs-deploy-dev.yml  docs-deploy-release.yml  docs-release.yml  docs.yml  link-check.yml  release.yml  test.yml
0.10.0/: 404.html  index.html  llms-full.txt  objects.inv  sitemap.xml
0.10.0/api/: index.html
0.10.0/examples/: index.html
0.10.0/getting-started/: index.html
0.10.0/guides/: index.html
0.10.0/search/: search_index.json
0.10.0/where-factrix-fits/: index.html
0.11.0/: 404.html  index.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
0.11.0/api/: index.html
0.11.0/examples/: index.html
0.11.0/getting-started/: index.html
0.11.0/guides/: index.html
0.11.0/search/: search_index.json
0.11.0/where-factrix-fits/: index.html
0.12.0/: 404.html  index.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
0.12.0/api/: index.html
0.12.0/examples/: index.html
0.12.0/guides/: index.html
0.12.0/search/: search_index.json
0.12.0/where-factrix-fits/: index.html
0.13.0/: 404.html  index.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
0.13.0/api/: index.html
0.13.0/examples/: index.html
0.13.0/guides/: index.html
0.13.0/search/: search_index.json
0.13.0/stylesheets/: nav.css
0.13.0/where-factrix-fits/: index.html
0.14.0/: 404.html  index.html  llms-full.txt  objects.inv  sitemap.xml
0.14.0/api/: index.html
0.14.0/examples/: index.html
0.14.0/guides/: index.html
0.14.0/search/: search_index.json
0.14.0/where-factrix-fits/: index.html
0.15.0/: index.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
0.15.0/api/: index.html
0.15.0/examples/: index.html
0.15.0/guides/: index.html
0.15.0/search/: search_index.json
0.15.0/where-factrix-fits/: index.html
0.16.0/: llms-full.txt  objects.inv  sitemap.xml
0.16.0/search/: search_index.json
0.17.0/: 404.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
0.17.0/api/: index.html
0.17.0/examples/: index.html
0.17.0/search/: search_index.json
0.17.0/where-factrix-fits/: index.html
0.18.0/: llms-full.txt  objects.inv  sitemap.xml
0.18.0/search/: search_index.json
0.18.0/where-factrix-fits/: index.html
0.19.0/: 404.html  index.html  llms.txt  sitemap.xml
0.19.0/api/: index.html
0.19.0/examples/: index.html
0.19.0/guides/: index.html
0.19.0/search/: search_index.json
0.7.0/: llms-full.txt  sitemap.xml
0.8.0/: 404.html  index.html
0.8.0/api/: index.html
0.8.0/examples/: index.html
0.8.0/getting-started/: index.html
0.8.0/guides/: index.html
0.8.0/search/: search_index.json
0.9.0/: 404.html  index.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
0.9.0/api/: index.html
0.9.0/examples/: index.html
0.9.0/getting-started/: index.html
0.9.0/guides/: index.html
0.9.0/search/: search_index.json
bench/: README.md  __init__.py  __main__.py  metric_sets.py  preflight.py  schema.py  ux_targets.py  ux_validate.py  validate.py  validator.py  wrapper.py
bench/baselines/: README.md
bench/scenarios/: __init__.py  _helpers.py  algo.py  continuous.py  dummy.py  sparse.py
dev/: 404.html  index.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
dev/api/: index.html
dev/examples/: index.html
dev/getting-started/: index.html
dev/guides/: index.html
dev/methodology_reference/: index.html
dev/metric_applicability/: index.html
dev/plan_factrix/: index.html
dev/search/: search_index.json
dev/statistical_methods/: index.html
docs/: index.md  metric_applicability.md  plan_direction.md  plan_factorlib.md  plan_factrix.md  statistical_methods.md  where-factrix-fits.md
docs/api/: analysis-config.md  bhy-across-metrics.md  bhy.md  compare.md  (+30 more)
examples/: demo.ipynb  demo.py  multi_factor_screening.ipynb  stock_factor_evaluation.ipynb
experiments/: _build_demo.py  benchmark_compact.py  benchmark_evaluate_batch_cpu.py  benchmark_two_stage_screening.py  demo.ipynb  dogfood_with_extra_columns.py
factorlib/: README.md  __init__.py  _api.py  _logging.py  _ols.py  _stats.py  _types.py  _validators.py  adapt.py  builders.py  config.py  dashboard.py  datasets.py  engine.py  experiment.py  factor.py  reporting.py  scoring.py  validation.py
factrix/: __init__.py  _analysis_config.py  _api.py  _axis.py  _chunk_size.py  _codes.py  _compare.py  _dag.py  _data_input.py  _describe.py  _errors.py  _evaluate.py  _family.py  _inspect.py  _logging.py  _metric_index.py  _multi_factor.py  _ols.py  _panel_input.py  _procedures.py  _profile.py  _registry.py  _results.py  _run_metrics.py  _stats.py  _types.py  _validators.py  adapt.py  config.py  datasets.py  factor.py  llms-full.txt  llms.txt  multi_factor.py  reporting.py  validation.py
scripts/: README.md  bench_diff.py  build_demo.py  gen_metric_matrix.py  setup_dev.py  sync_examples.py  sync_llms_txt.py
tests/: _doc_validation.py  _run_metrics_helpers.py  _slice_panel.py  conftest.py  test_adapt.py  test_adf_persistence.py  test_api.py  test_api_config_mismatch.py  test_api_new.py  test_artifacts_metric_outputs.py  test_bhy.py  test_bhy_across_metrics.py  test_bhy_hierarchical.py  test_by_regime.py  test_by_slice.py  test_caar.py  test_caar_procedure.py  test_common_asymmetry.py  test_common_betas.py  test_common_panel_procedures.py  test_common_quantile.py  test_compacted_prepared.py  test_compare.py  test_concentration.py  test_corrado_rank.py  test_cross_type_invariants.py  test_dag.py  test_data_input.py  test_datasets.py  test_deprecated_multi_horizon.py  test_directional_hit_rate.py  test_directional_pair_accuracy.py  test_dispatch_markers.py  test_docs_issue_726.py  test_docs_llms.py  test_docs_matrix.py  test_docs_pages.py  test_docs_registry_cells.py  test_docs_stat_keys_by_metric.py  test_docs_terminology_ratchet.py  (+122 more)
(+1171 files in other folders)
