[project]
name = "factrix"
version = "0.7.0"
description = "Polars-native factor signal validation toolkit for quantitative finance"
readme = "README.md"
authors = [
  { name = "Jason Pan", email = "atk50715@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["quantitative-finance", "factor-analysis", "polars", "statistics","asset-pricing", "cross-sectional", "fama-macbeth", "ic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "polars>=1.38",
    "numpy>=2.0",
    "scipy>=1.13",
    "pandera>=0.29",
]

[project.urls]
Repository = "https://github.com/awwesomeman/factrix"
Issues = "https://github.com/awwesomeman/factrix/issues"
Changelog = "https://github.com/awwesomeman/factrix/blob/main/CHANGELOG.md"

[project.optional-dependencies]
charts = ["plotly>=6.0"]
mlflow = ["mlflow>=3.10"]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.4.0",
    "ipywidgets>=7.7.0",
    "nbformat>=4.2.0",
]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pre-commit>=4.5.1",
    "ruff==0.15.12",
    "commitizen>=4.10.1",
    "mypy>=1.0.0",
    "build",
    "twine",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-jupyter>=0.25",
    "mkdocs>=1.5.0,<2.0",
    "mike>=2.1",
]
all = ["factrix[charts,mlflow,jupyter]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["factrix", "tests", "examples", "scripts"]

[tool.ruff.lint]
# Mainstream rule set per #52 — pycodestyle (E/W), pyflakes (F),
# isort (I), bugbear (B), pyupgrade (UP), simplify (SIM),
# ruff-specific (RUF). Line length is left to the formatter.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line too long — formatter handles
    # Ambiguous-character lints fire on intentional math/scientific
    # notation (ρ, ×, −, en-dash) used in docstrings and comments
    # throughout the metrics modules. Disabling avoids polluting prose
    # with `# noqa` markers on every Greek letter.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Notebook-style cell scripts have intentional non-top imports between
# `# %%` cells; the section-marker pattern in test_registry.py is the
# same shape.
"examples/demo.py" = ["E402"]
"tests/test_registry.py" = ["E402"]
# `__all__` is grouped by section comments (Configuration, Errors,
# Profile + dispatch, …) for human readers; alphabetical sort would
# break that grouping.
"factrix/__init__.py" = ["RUF022"]
"factrix/metrics/__init__.py" = ["RUF022"]

[tool.setuptools.packages.find]
include = ["factrix*"]
namespaces = false

[tool.setuptools.package-data]
factrix = ["llms.txt", "llms-full.txt"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
tag_format = "v$version"
bump_message = "chore(release): v$new_version"
changelog_incremental = true
major_version_zero = true
version_files = [
    "pyproject.toml:version",
    "factrix/__init__.py:__version__"
]

