[project]
name = "factrix"
version = "0.13.0"
description = "Polars-native factor signal validation toolkit for quantitative finance"
readme = "README.md"
authors = [
  { name = "Jason Pan", email = "atk50715@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["quantitative-finance", "factor-analysis", "polars", "statistics","asset-pricing", "cross-sectional", "fama-macbeth", "ic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "polars>=1.38",
    "numpy>=2.0",
    "scipy>=1.13",
    "pandera>=0.29",
]

[project.urls]
Repository = "https://github.com/awwesomeman/factrix"
Issues = "https://github.com/awwesomeman/factrix/issues"
Changelog = "https://github.com/awwesomeman/factrix/blob/main/CHANGELOG.md"

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.4.0",
    "ipywidgets>=7.7.0",
    "nbformat>=4.2.0",
]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pre-commit>=4.5.1",
    "ruff==0.15.12",
    "commitizen>=4.10.1",
    "mypy>=1.20",
    "build",
    "twine",
    "factrix[bench]",
]
bench = [
    "pydantic>=2.6",
    "psutil>=5.9",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs>=1.5.0,<2.0",
    "mike>=2.1",
]
all = ["factrix[jupyter]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"

[tool.mypy]
python_version = "3.12"
files = ["factrix"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["scipy.*", "pandas", "pandas.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["factrix", "tests", "examples", "scripts"]

[tool.ruff.lint]
# Mainstream rule set per #52 — pycodestyle (E/W), pyflakes (F),
# isort (I), bugbear (B), pyupgrade (UP), simplify (SIM),
# ruff-specific (RUF). D = pydocstyle, scoped to Google convention
# via [tool.ruff.lint.pydocstyle] below; see #313 for the docstring
# style boundary. Line length is left to the formatter.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "D"]
ignore = [
    "E501",   # line too long — formatter handles
    # Ambiguous-character lints fire on intentional math/scientific
    # notation (ρ, ×, −, en-dash) used in docstrings and comments
    # throughout the metrics modules. Disabling avoids polluting prose
    # with `# noqa` markers on every Greek letter.
    "RUF001",
    "RUF002",
    "RUF003",
    # Pydocstyle (D) rules silenced project-wide — see #313:
    "D213",   # mutually exclusive with D212 (Google: summary on first line)
    "D102",   # missing public-method docstring — content audit, not style
    "D105",   # missing dunder docstring — dunders rarely need prose
    "D107",   # missing __init__ docstring — class-level docstring covers it
    "D205",   # 1 blank line between summary and description — fix opportunistically
    "D417",   # missing arg description — content audit, *args / **kwargs noisy
]

[tool.ruff.lint.pydocstyle]
# Google docstring convention drives the recognised section set
# (Args / Returns / Raises / Yields / Warns / Attributes / Notes /
# Examples / References — see docs/development/contributing.md
# §"Docstring style boundary"). The convention shortcut auto-disables
# D rules that conflict with Black / ruff formatting defaults.
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Notebook-style cell scripts have intentional non-top imports between
# `# %%` cells; the section-marker pattern in test_registry.py is the
# same shape.
"examples/demo.py" = ["E402"]
"tests/test_registry.py" = ["E402"]
# `__all__` is grouped by section comments (Configuration, Errors,
# Profile + dispatch, …) for human readers; alphabetical sort would
# break that grouping.
"factrix/__init__.py" = ["RUF022"]
"factrix/metrics/__init__.py" = ["RUF022"]
# Tests, examples, scripts opt out of D — docstrings there are
# discretionary; lint scope is the user-facing factrix/ surface.
"tests/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]

[tool.setuptools.packages.find]
# `include` already restricts to factrix*; `exclude` is belt-and-suspenders
# so bench/ (internal harness, sub-issue #381) and tests/ can never leak
# into the published wheel.
include = ["factrix*"]
exclude = ["bench*", "tests*"]
namespaces = false

[tool.setuptools.package-data]
factrix = ["llms.txt", "llms-full.txt"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.13.0"
tag_format = "v$version"
bump_message = "chore(release): v$new_version"
annotated_tag = true
changelog_incremental = true
major_version_zero = true
version_files = [
    "pyproject.toml:version",
    "factrix/__init__.py:__version__"
]
pre_bump_hooks = [
    "uv lock",
    "git add uv.lock",
]

